--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-icons": "^4.7.1",
     "react-image-crop": "^10.0.9",
     "react-map-gl": "^7.0.21",
+    "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
     "react-toastify": "^9.1.1",
     "redux-logger": "^3.0.6",
