--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-redux": "^8.0.5",
     "react-toastify": "^9.1.1",
     "redux-logger": "^3.0.6",
+    "serve": "^14.2.0",
     "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.6",
     "sweetalert2": "^11.4.8",
