--- a/config/package.json
+++ b/config/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "private": true,
   "version": "0.0.0",
-  "proxy": "http://localhost:3033/",
+  "proxy": "https://makeframes.herewego.shop/",
   "type": "module",
   "scripts": {
     "dev": "vite",
